--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       href="./assets/images/favicon/tree.svg"
       type="image/x-icon"
     />
-    <title>Social Tree</title>
+    <title>Social Links</title>
   </head>
   <body class="dark-blue">
     <div class="container">
